--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    background-color: #e80202;
+    /* background-color: #e80202; */
+    background-color: #ffffff;
 }
 
 
@@ -32,6 +33,7 @@
 
 p
 {
+    text-shadow: 10px 10px 50px rgba(0, 0, 0, .3);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 10em;
