--- a/css/main.css
+++ b/css/main.css
@@ -23,17 +23,18 @@
 {
     z-index: -100;
     position: absolute;
+    top: 45%;
+    left: 45%;
     width: 50px;
     height: 100px;
     background-color: #e80202;
-    box-shadow: 10px 10px 50px rgba(0, 0, 0, .3);
-    transition: all 4s ease-in-out;
+    transition: all 5s ease-in-out;
 }
 
 
 p
 {
-    text-shadow: 10px 10px 50px rgba(0, 0, 0, .3);
+    text-shadow: 10px 10px 50px rgba(0, 0, 0, .4);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 10em;
